# llm_rl

./: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  pyproject.toml  pyrefly.toml  start.sh
configs/: offline.json  test.json  value-net.json
env_assets/: wordle_words.txt
episode_viewer/: viewer2.html
llmrl/: benchmark.py  checkpoint.py  config.py  eval_env.py  main.py  model.py  rope.py  train.py
llmrl/agent/: lite.py
llmrl/env/: basic_arithmatic.py
llmrl2/: benchmark.py  checkpoint.py  config.py  main.py  model.py  rope.py  util.py
python/llmrl/: base_model_loader.py  buffer.py  build_offline.py  chat.py  checkpoint.py  checkpointer.py  cli.py  config.py  eval.py  eval_env.py  experiement.py  logger.py  model.py  render_values.py  rollout.py  rope.py  temp.py  train.py  train_rl.py  train_value.py  types.py  update_step.py  util.py
python/llmrl/agent/: __init__.py  base.py  lite.py  local.py
python/llmrl/env/: base.py  basic_arithmatic.py  make.py
python/llmrl/model/: __init__.py  attention.py  layer.py  linear.py  mlp.py  qwen3.py  util.py  value_network.py
python/llmrl/utils/: __init__.py  episode_to_jsonl.py  optimizer.py
src/: advantage.rs  arithmatic.rs  arithmetic.rs  env.rs  lib.rs  td_lambda.rs  wordle.rs
tests/: test_buffer.py  test_optimizer_config.py  test_util.py  verify_offline_loading.py
