[project]
name = "llmrl"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "datasets>=4.4.1",
    "distrax>=0.1.7",
    "flax>=0.12.0",
    "jax[cuda12]>=0.8.0",
    "jinja2>=3.1.6",
    "litellm>=1.80.5",
    "ml-dtypes>=0.5.3",
    "optax>=0.2.6",
    "rich>=14.2.0",
    "safetensors>=0.6.2",
    "transformers>=4.57.1",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "llmrl._envs"

[project.scripts]
eval_env = "llmrl.eval_env:main"
